fixed view gallery padding on mobile

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -416,7 +416,7 @@ ul.dropdown-menu {
 }
 
 #view-gallery {
-  padding: 0px 0px 20px;
+  padding: 0px 30px 20px;
 }
 
 #view-gallery a {
